Fixed: Minor issues with E-Commerce app + Fixed: Navigation collapsable items don't expand if the url has extra parameters in it

--- a/src/app/main/content/apps/e-commerce/order/order.component.scss
+++ b/src/app/main/content/apps/e-commerce/order/order.component.scss
@@ -37,7 +37,7 @@
                         overflow: auto;
 
                         .invoice-container {
-                            padding: 64px;
+                            padding: 16px;
 
                             .card {
                                 width: 1020px;
